<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/app_name"/>

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/city_name"/>

        <item
            android:id="@+id/drawer_downloaded"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/refresh"/>

        <item
            android:id="@+id/drawer_more"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/custom_notification"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/options"/>

    </group>
</menu>
